Part-1 is completed.

--- a/Unit2TipCalculator/app/src/main/res/values/strings.xml
+++ b/Unit2TipCalculator/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="okay_service">Okay (%15)</string>
     <string name="calculate">CALCULATE</string>
     <string name="round_up_tip">Round up tip?</string>
+    <string name="tip_amount">Tip Amount: %s</string>
 </resources>
